# nycu-dissertation

./: .gitignore  .gitmodules  1227.md  CWEs.md  README.md  TTE.py  TTE.sh  TTE_check.py  TTE_plot.py  TTR.py  TTR.sh  all.sh  cmd.sh  compose.yaml  container_triage.py  cov.py  cves.env  cves.env.template  evaluate.sh  input-output-scheme-v2.md  loop.py  loop.sh  loop_all.py  loop_all.sh  manage-old.py  manage.py  manage.sh  manage_slurm.py  mutation_exploit.md  mutation_strategies.md  readme.md  stat_plot.py  worklist.csv  worklist.md
afl-integration/: .gitignore  compose.yaml  llm_mutator.py
afl-integration/workspace/: build.sh  inspect_fuzz_result.sh  note.md  run_fuzz.sh  target.c
afl-libarchive/: compose.yaml  dockerfile  inspect_fuzz_result.sh  libarchive_fuzzer_cov.cc  run_fuzz.sh
afl-study/exercise1/: readme.md  simple_crash.cpp
baseline/cJSON/: compose.yaml  dockerfile  harness.c  run_all.sh
bench/: docker-compose.master.yml  script.sh
bench/base/: compose.yaml
bench/binutils-2.26_cxxfilt_CVE-2016-4487/: .env  (+5 more)
llvmPass-study/: .gitignore  makefile  my_abi.txt  note.md  rpfcc.cpp
notes/: input-output-scheme-v1.md  input-output-scheme-v2.md  report.md
notes/klee-study/: .gitignore  CMakeLists.txt  test.c
scripts/: ARM_plot.py  ARM_stats.py  TTE_check.py  TTE_plot.py  TTE_plot_old.py  TTR.py  container_triage.py  generate_master_compose.py  live_triage.py  matrix_plot.py  sbatch.sh  sbatch_old.sh  stat_plot.py  update_dockerfiles_muoafl.py
test/: motivating_example.c  script.sh
tools/: Modelfile  compose.yml  dockerfile  graph.py  plot_all.sh
(+627 files in other folders)
